--- a/manifests/deploy-microservice.yml
+++ b/manifests/deploy-microservice.yml
@@ -2,26 +2,26 @@ kind: Deployment
 apiVersion: apps/v1
 metadata:
     labels:
-        app: rohit-microservices
+        app: rohit-microservice
         stack: frontend
         source: demo
-    name: rohit-microservices
+    name: rohit-microservice
     namespace: microservices
 spec:
     replicas: 3
     selector:
         matchLabels:
-            run: rohit-microservices
+            run: rohit-microservice
     template:
         metadata:
             labels:
-                app: rohit-microservices
-                run: rohit-microservices
+                app: rohit-microservice
+                run: rohit-microservice
                 source: demo
         spec:
             containers:
-                -   image: 465848653329.dkr.ecr.us-west-2.amazonaws.com/rohit-microservices
-                    name: rohit-microservices
+                -   image: 465848653329.dkr.ecr.us-west-2.amazonaws.com/rohit-microservice
+                    name: rohit-microservice
                     ports:
                         -   name: web
                             containerPort: 8080
@@ -31,13 +31,13 @@ kind: Service
 apiVersion: v1
 metadata:
     labels:
-        app: rohit-microservices-service
-    name: rohit-microservices-service
+        app: rohit-microservice-service
+    name: rohit-microservice-service
     namespace: microservices
 spec:
     selector:
         source: demo
-        app: rohit-microservices
+        app: rohit-microservice
     ports:
         -   name: web
             protocol: TCP
@@ -51,15 +51,15 @@ kind: Ingress
 metadata:
     annotations:
         nginx.ingress.kubernetes.io/rewrite-target: /$2
-    name: rohit-microservices-ingress
+    name: rohit-microservice-ingress
     namespace: microservices
 spec:
     rules:
         -   http:
                 paths:
-                    -   path: /rohit-microservices(/|$)(.*)
+                    -   path: /rohit-microservice(/|$)(.*)
                         backend:
-                            serviceName: rohit-microservices-service
+                            serviceName: rohit-microservice-service
                             servicePort: 30201
 
 
